--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,7 +19,7 @@ rootProject.allprojects {
         google()
         jcenter()
         maven {
-            url 'https://dl.bintray.com/qichuan/maven/'
+            maven { url 'https://jitpack.io' }
         }
     }
 }
@@ -44,7 +44,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.zqc.opencc.android.lib:lib-opencc-android:1.2.0@aar"
+    implementation 'com.github.qichuan:android-opencc:1.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
